varnish/tests/fail/error_obj_no_ctor.stderr
error: Object must have a constructor called `new`
 --> tests/fail/error_obj_no_ctor.rs:6:10
  |
6 |     impl ObjNoCtor {
  |          ^^^^^^^^^
